fix setting panel not correctly showing apply state